--- a/application/views/404.html
+++ b/application/views/404.html
@@ -1,2 +1,2 @@
-<h1>Page not found!</h1>
-<div class="img"><img src="http://<?=SITE?>/source/img/404.jpg" width="300" height="300"></div>
+<div class='alert alert-warning msg'><h1 class="head"><b>404</b> Page not found!</h1></div>
+<div class="img"><img src="<?=SITE?>/source/img/cat-404.gif" width="300" height="300"></div>
