--- a/application/views/index.html
+++ b/application/views/index.html
@@ -5,7 +5,7 @@
             <td>
                 <div class="input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter a name">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter a name" required>
                 </div>
             </td>
         </tr>
@@ -59,8 +59,8 @@
         <tr>
             <td>
                 <select id="gender" class="form-control" name="gender">
-                    <option value="2">Женский</option>
-                    <option value="1">Мужской</option>
+                    <option value="1">Женский</option>
+                    <option value="2">Мужской</option>
                 </select>
             </td>
         <tr>
