--- a/application/views/page.html
+++ b/application/views/page.html
@@ -5,8 +5,8 @@
         <title><?=$this->getTitle()?></title>
     </head>
     <body>
-        <div class = "navbar navbar-primary navbar-fixed-top">
-            <div class="container">
+        <nav class = "navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
                         <span class="sr-only">Открыть навигацию</span>
@@ -20,24 +20,24 @@
                     <ul class="nav navbar-nav">
                         <li><a href="<?=SITE?>">Регистрация</a></li>
                         <li><a href="<?=SITE?>/runner/list">Список участников</a></li>
-                        <li>
-                            <form action="<?=SITE?>/search" method="POST">
-                                <div class="input-group">
-                                    <span class="input-group-addon"><button type="submit" class="glyphicon glyphicon-search"></button></span>
-                                    <input type="text" class="form-control" placeholder="Введите слово для поиска..."  id="search" name="search">
-                                </div>
-                            </form>   
-                        </li>
                     </ul>
+                    <form class="navbar-form navbar-left" role="search" action="<?=SITE?>/search/list" method="POST">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Введите слово для поиска..."  id="search" name="search">
+                        </div>
+                        <button type="submit" class="btn btn-lg glyphicon glyphicon-search"></button>
+                    </form>
                 </div>
             </div>
-        </div>
+        </nav>
     	<div class="panel panel-primary">
-    		<div class="panel-heading">MARATHON</div>
+    		<div class="panel-heading"><b>MARATHON</b></div>
     		<div class="panel-body">
            		<?=$this->body?>
         	</div>
-            <div class="panel-footer"><span class="input-group-addon">@copyright (c) 2015, Markisbek uulu Nursultan</span></div>
+            <div class="panel-footer">
+                <span class="input-group-addon"><span class="glyphicon glyphicon-copyright-mark"></span><b>Copyright:</b> 2015, Markisbek uulu Nursultan</span>
+            </div>
         </div>
     </body>
 </html>
